# Python-Object-Oriented-Programming-5thed

./: Makefile  README.md
ch_01/: README.md  pyproject.toml
ch_01/data/: Automobile-1.json  Automobile-2.json  VehicleAbstract.json  VehicleInterface.json
ch_01/src/: big_script.py
ch_01/tests/: test_big_script.py
ch_02/: README.md  pyproject.toml
ch_02/src/: bad_hints.py  basic_imports.py  chess.py  console_examples.py  db_global.py  first_class.py  formatter.py  point_0.py  point_1.py  point_2.py  point_3.py  point_4.py
ch_02/src/ecommerce/: __init__.py  database.py  main.py  products.py  vendors.py
ch_02/src/ecommerce/payments/: square.py  stripe.py
ch_02/tests/: test_ecommerce.py  test_point.py
ch_03/: README.md  pyproject.toml
ch_03/src/: commerce.py  commerce_0.py  commerce_naive.py  diamond.py  media_model_1.py
ch_04/: README.md  pyproject.toml
ch_04/src/: banking.py  exception_example.py  manufacturing.py  odd_example.py
ch_05/: README.md  pyproject.toml
ch_05/src/: archive_tweaker.py  colors.py  shapes_1.py  shapes_2.py
ch_05/tests/: test_archive_tweaker.py
ch_06/: README.md  pyproject.toml
ch_06/src/: abstractions.py  debugging_help.py  dice.py  dict_ext.py  lookup_mapping.py  media_model_2.py  odd_example.py
ch_06/tests/: test_debugging_help.py  test_dice.py
ch_07/: README.md  pyproject.toml
ch_07/src/: dice_examples.py  pydantic_example.py
ch_07/tests/: test_pydantic.py
ch_08/: README.md  pyproject.toml
ch_08/src/: console_examples.py  dc_stocks.py  dictionaries.py  lists.py  nt_stocks.py  queue_example.py  sets.py  td_stocks.py  tuple_stocks.py
ch_09/: README.md  pyproject.toml
ch_09/data/: sample_data.md
ch_09/src/: fizzbuzz.py  function_demo.py  parameters.py  protocol_examples.py  run_doctest.py
ch_09/tests/: test_function_demo.py
ch_10/: README.md  pyproject.toml
ch_10/src/: iterator_examples.py  log_analysis.py
ch_10/tests/: log_sample.py
ch_11/: README.md  pyproject.toml
ch_11/src/: decorations.py  dice.py  dice_server.py  image_filler.py  inventory.py  nmea_states.py  nmea_states_2.py  pattern_examples.py  socket_server.py
ch_11/tests/: test_dice.py  test_dice_server.py  test_image_filler.py  test_socket_client.py  test_socket_server.py
ch_12/: README.md  pyproject.toml
ch_12/docs/: composite.uml
ch_12/src/: age_computation.py  car_sales.py  card_games.py  file_system.py  gps_message_slots.py  gps_messages.py  images.py  ordered_list.py
ch_12/tests/: test_car_sales.py  test_cards.py  test_images.py
ch_13/: README.md  pyproject.toml
ch_13/src/: checksum_writer.py  flight_status_redis.py  log_catcher.py  model.py  remote_logging_app.py  stats.py
ch_13/tests/: test_38_39.py  test_averages.py  test_check_numbers.py  test_checksum_writer.py  test_flight_status_tracker.py  test_logging_app.py  test_setup_teardown.py  test_with_pytest.py
ch_14/: README.md  pyproject.toml
ch_14/benches/: time_to_write.py
ch_14/bonus/: image_compressor.py  test_image_compressor.py
ch_14/images/: make_images.py
ch_14/src/: code_search.py  demo_log_catcher.py  demo_signals.py  directory_search.py  food_truck.py  log_catcher.py  philosophers.py  prime_factor.py  processes_1.py  remote_logging_app.py  weather_async.py  weather_threads.py
ch_14/tests/: test_aync_1.py  test_code_search.py  test_directory_search.py  test_fw_model.py  test_log_catcher.py  test_philosophers.py  test_weather_async.py  test_weather_threads.py
