[project]
name = "ch_05"
version = "2025.4.0"
description = "Python 3 Object-Oriented Programming, 5th ed., Chapter 5"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["Python", "object-oriented design"]
authors = [
  {email = "slott56@gmail.com"},
  {name = "Steven F. Lott"}
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pillow>=11.0.0",
    "types-beautifulsoup4>=4.12.0.20241020",
]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.13", "3.12", "type"]

[tool.tox.env_run_base]
description = "Run test suite under {base_python}"
deps = ["pytest", "ruff"]
commands = [
  # ["pytest"],  # no tests directory
  ["pytest", "--doctest-modules", "-vv", "src"],
  ["ruff", "check", "--ignore", "E402"],
]

[tool.tox.env.type]
description = "run type check on code base"
deps = ["pyright", "mypy"]
commands = [
  ["pyright", "src"],
  ["mypy", "src"],
]

[tool.pyright]
reportUnusedExpression = false
include = ["src"]

[tool.mypy]
show_error_codes = true
strict = true
